# computare-doc-ingest

./: .gitignore  README.md  cli.py  pyproject.toml
app/: demo.py
cache/: content_hash.py
eval/: metrics.py  run_eval.py
eval/dataset/: .gitkeep
examples/: .gitkeep
models/: glm_ocr.py  prompts.py
pipelines/: bank_statement_ie.py  image_to_text.py  one_step_json.py  pdf_to_markdown.py  table_extraction.py  two_step_ocr_then_llm.py
postprocess/: financial_schema.py  json_validate.py  markdown_normalize.py
preprocess/: image_cleanup.py  layout.py  pdf_render.py
prompts/: __init__.py  extract_schema.json  glm_ocr_prompts.py
service/: client.py  server.py
