[project]
name = "computare-doc-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@main"

]
